--- a/privacy/index.html
+++ b/privacy/index.html
@@ -63,7 +63,7 @@ The content of this website has been compiled with meticulous care and to the be
   
   
   
-    <meta name="theme-color" content="#1565c0" />
+    <meta name="theme-color" content="#009440" />
   
 
   
@@ -252,7 +252,7 @@ The content of this website has been compiled with meticulous care and to the be
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.e7623dd8551519061cb997839c90f845.css" />
+  <link rel="stylesheet" href="/css/wowchemy.aa718a8d69ecf4e846554d73334cc62c.css" />
 
   
 
