--- a/privacy/index.html
+++ b/privacy/index.html
@@ -40,7 +40,7 @@ Limitation of liability for internal content:
 The content of this website has been compiled with meticulous care and to the best of my knowledge." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://fabian.stuermerheiber.github.io/privacy/" />
+  <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/privacy/" />
 
   
 
@@ -280,7 +280,7 @@ The content of this website has been compiled with meticulous care and to the be
   <link rel="icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="https://fabian.stuermerheiber.github.io/privacy/" />
+  <link rel="canonical" href="https://fabian-stuermerheiber.github.io/privacy/" />
 
   
   
@@ -297,7 +297,7 @@ The content of this website has been compiled with meticulous care and to the be
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
-  <meta property="og:url" content="https://fabian.stuermerheiber.github.io/privacy/" />
+  <meta property="og:url" content="https://fabian-stuermerheiber.github.io/privacy/" />
   <meta property="og:title" content="Legal Notice | Fabian Stürmer-Heiber" />
   <meta property="og:description" content="Information in accordance with § 5 Telemediengesetz:
 Fabian Stürmer-Heiber
@@ -306,8 +306,8 @@ Piflaser Weg 10b
 Germany
 Mail: fabian.stuermerheiber@econ.lmu.de
 Limitation of liability for internal content:
-The content of this website has been compiled with meticulous care and to the best of my knowledge." /><meta property="og:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
-    <meta property="twitter:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
+The content of this website has been compiled with meticulous care and to the best of my knowledge." /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+    <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
