--- a/publication/ccsubsidies/index.html
+++ b/publication/ccsubsidies/index.html
@@ -33,7 +33,7 @@
   <meta name="description" content="This paper studies the dynamic fiscal implications of childcare policies through their impact on maternal life-cycle earnings and tax payments. We estimate a dynamic discrete choice model of female labour supply and childcare decision on German panel data. We  account for a large amount of heterogeneity: beyond heterogeneous preferences, education levels, wages, and availability of informal child care, we also account for heterogeneity in fertility such as timing of birth(s) and number of children. This allows us to analyse various (counterfactual) policy experiments and account for the heterogeneous responses to such policies. First, we evaluate a nationwide public childcare expansion in Germany and find that the increase in publicly provided childcare supply fully paid for itself through the dynamic effects on maternal earnings and tax payments. Increasing subsidies further from the current generous levels (~ 80%), however, would only be  6% self-financing because it would primarily benefit households that are infra-marginal in their childcare and labour supply decision." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://fabian.stuermerheiber.github.io/publication/ccsubsidies/" />
+  <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/publication/ccsubsidies/" />
 
   
 
@@ -273,7 +273,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="https://fabian.stuermerheiber.github.io/publication/ccsubsidies/" />
+  <link rel="canonical" href="https://fabian-stuermerheiber.github.io/publication/ccsubsidies/" />
 
   
   
@@ -290,10 +290,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
-  <meta property="og:url" content="https://fabian.stuermerheiber.github.io/publication/ccsubsidies/" />
+  <meta property="og:url" content="https://fabian-stuermerheiber.github.io/publication/ccsubsidies/" />
   <meta property="og:title" content="The Fiscal Return to Childcare Policies | Fabian Stürmer-Heiber" />
-  <meta property="og:description" content="This paper studies the dynamic fiscal implications of childcare policies through their impact on maternal life-cycle earnings and tax payments. We estimate a dynamic discrete choice model of female labour supply and childcare decision on German panel data. We  account for a large amount of heterogeneity: beyond heterogeneous preferences, education levels, wages, and availability of informal child care, we also account for heterogeneity in fertility such as timing of birth(s) and number of children. This allows us to analyse various (counterfactual) policy experiments and account for the heterogeneous responses to such policies. First, we evaluate a nationwide public childcare expansion in Germany and find that the increase in publicly provided childcare supply fully paid for itself through the dynamic effects on maternal earnings and tax payments. Increasing subsidies further from the current generous levels (~ 80%), however, would only be  6% self-financing because it would primarily benefit households that are infra-marginal in their childcare and labour supply decision." /><meta property="og:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
-    <meta property="twitter:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="This paper studies the dynamic fiscal implications of childcare policies through their impact on maternal life-cycle earnings and tax payments. We estimate a dynamic discrete choice model of female labour supply and childcare decision on German panel data. We  account for a large amount of heterogeneity: beyond heterogeneous preferences, education levels, wages, and availability of informal child care, we also account for heterogeneity in fertility such as timing of birth(s) and number of children. This allows us to analyse various (counterfactual) policy experiments and account for the heterogeneous responses to such policies. First, we evaluate a nationwide public childcare expansion in Germany and find that the increase in publicly provided childcare supply fully paid for itself through the dynamic effects on maternal earnings and tax payments. Increasing subsidies further from the current generous levels (~ 80%), however, would only be  6% self-financing because it would primarily benefit households that are infra-marginal in their childcare and labour supply decision." /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+    <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -323,7 +323,7 @@
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://fabian.stuermerheiber.github.io/publication/ccsubsidies/"
+    "@id": "https://fabian-stuermerheiber.github.io/publication/ccsubsidies/"
   },
   "headline": "The Fiscal Return to Childcare Policies",
   
@@ -340,7 +340,7 @@
     "name": "Fabian Stürmer-Heiber",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
+      "url": "https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
     }
   },
   "description": "This paper studies the dynamic fiscal implications of childcare policies through their impact on maternal life-cycle earnings and tax payments. We estimate a dynamic discrete choice model of female labour supply and childcare decision on German panel data. We  account for a large amount of heterogeneity: beyond heterogeneous preferences, education levels, wages, and availability of informal child care, we also account for heterogeneity in fertility such as timing of birth(s) and number of children. This allows us to analyse various (counterfactual) policy experiments and account for the heterogeneous responses to such policies. First, we evaluate a nationwide public childcare expansion in Germany and find that the increase in publicly provided childcare supply fully paid for itself through the dynamic effects on maternal earnings and tax payments. Increasing subsidies further from the current generous levels (~ 80%), however, would only be  6% self-financing because it would primarily benefit households that are infra-marginal in their childcare and labour supply decision."
