--- a/publication/hours/index.html
+++ b/publication/hours/index.html
@@ -33,7 +33,7 @@
   <meta name="description" content="We disentangle the effects of working different part-time hours on current and expected future wages using administrative employee records." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://fabian.stuermerheiber.github.io/publication/hours/" />
+  <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/publication/hours/" />
 
   
 
@@ -273,7 +273,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="https://fabian.stuermerheiber.github.io/publication/hours/" />
+  <link rel="canonical" href="https://fabian-stuermerheiber.github.io/publication/hours/" />
 
   
   
@@ -290,10 +290,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
-  <meta property="og:url" content="https://fabian.stuermerheiber.github.io/publication/hours/" />
+  <meta property="og:url" content="https://fabian-stuermerheiber.github.io/publication/hours/" />
   <meta property="og:title" content="The Career Cost of Working Part-Time | Fabian Stürmer-Heiber" />
-  <meta property="og:description" content="We disentangle the effects of working different part-time hours on current and expected future wages using administrative employee records." /><meta property="og:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
-    <meta property="twitter:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="We disentangle the effects of working different part-time hours on current and expected future wages using administrative employee records." /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+    <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -323,7 +323,7 @@
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://fabian.stuermerheiber.github.io/publication/hours/"
+    "@id": "https://fabian-stuermerheiber.github.io/publication/hours/"
   },
   "headline": "The Career Cost of Working Part-Time",
   
@@ -340,7 +340,7 @@
     "name": "Fabian Stürmer-Heiber",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
+      "url": "https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
     }
   },
   "description": "We disentangle the effects of working different part-time hours on current and expected future wages using administrative employee records."
