--- a/publication/promotions/index.html
+++ b/publication/promotions/index.html
@@ -33,7 +33,7 @@
   <meta name="description" content="Early career years for both men and women are characterized by a fast accumulation of human capital. However, despite starting with comparable qualifications, young men are promoted at higher rates than young women. One potential underlying reason is that employers take the cost of (long) maternity leave into account when making promotion decisions. In this paper, we first present novel descriptive evidence on the gender gap in promotion rates using high-quality administrative data from Germany. Second, we exploit quasi-random variation induced by a staggered expansion of public childcare to identify the causal effect of childcare availability on women’s pre-birth promotion probabilities. We find that a ten percentage point increase in childcare availability increases the promotion probability of young women by approximately ten percent. As public childcare allows mothers to return to labor market earlier, this result provides evidence for the hypothesis that the expansion effectively reduced the leave-related cost for employers, thereby boosting young women’s career prospects." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://fabian.stuermerheiber.github.io/publication/promotions/" />
+  <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/publication/promotions/" />
 
   
 
@@ -273,7 +273,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="https://fabian.stuermerheiber.github.io/publication/promotions/" />
+  <link rel="canonical" href="https://fabian-stuermerheiber.github.io/publication/promotions/" />
 
   
   
@@ -290,10 +290,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
-  <meta property="og:url" content="https://fabian.stuermerheiber.github.io/publication/promotions/" />
+  <meta property="og:url" content="https://fabian-stuermerheiber.github.io/publication/promotions/" />
   <meta property="og:title" content="Women’s early careers and childcare policy | Fabian Stürmer-Heiber" />
-  <meta property="og:description" content="Early career years for both men and women are characterized by a fast accumulation of human capital. However, despite starting with comparable qualifications, young men are promoted at higher rates than young women. One potential underlying reason is that employers take the cost of (long) maternity leave into account when making promotion decisions. In this paper, we first present novel descriptive evidence on the gender gap in promotion rates using high-quality administrative data from Germany. Second, we exploit quasi-random variation induced by a staggered expansion of public childcare to identify the causal effect of childcare availability on women’s pre-birth promotion probabilities. We find that a ten percentage point increase in childcare availability increases the promotion probability of young women by approximately ten percent. As public childcare allows mothers to return to labor market earlier, this result provides evidence for the hypothesis that the expansion effectively reduced the leave-related cost for employers, thereby boosting young women’s career prospects." /><meta property="og:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
-    <meta property="twitter:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Early career years for both men and women are characterized by a fast accumulation of human capital. However, despite starting with comparable qualifications, young men are promoted at higher rates than young women. One potential underlying reason is that employers take the cost of (long) maternity leave into account when making promotion decisions. In this paper, we first present novel descriptive evidence on the gender gap in promotion rates using high-quality administrative data from Germany. Second, we exploit quasi-random variation induced by a staggered expansion of public childcare to identify the causal effect of childcare availability on women’s pre-birth promotion probabilities. We find that a ten percentage point increase in childcare availability increases the promotion probability of young women by approximately ten percent. As public childcare allows mothers to return to labor market earlier, this result provides evidence for the hypothesis that the expansion effectively reduced the leave-related cost for employers, thereby boosting young women’s career prospects." /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+    <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -323,7 +323,7 @@
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://fabian.stuermerheiber.github.io/publication/promotions/"
+    "@id": "https://fabian-stuermerheiber.github.io/publication/promotions/"
   },
   "headline": "Women’s early careers and childcare policy",
   
@@ -340,7 +340,7 @@
     "name": "Fabian Stürmer-Heiber",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
+      "url": "https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_192x192_fill_lanczos_center_2.png"
     }
   },
   "description": "Early career years for both men and women are characterized by a fast accumulation of human capital. However, despite starting with comparable qualifications, young men are promoted at higher rates than young women. One potential underlying reason is that employers take the cost of (long) maternity leave into account when making promotion decisions. In this paper, we first present novel descriptive evidence on the gender gap in promotion rates using high-quality administrative data from Germany. Second, we exploit quasi-random variation induced by a staggered expansion of public childcare to identify the causal effect of childcare availability on women’s pre-birth promotion probabilities. We find that a ten percentage point increase in childcare availability increases the promotion probability of young women by approximately ten percent. As public childcare allows mothers to return to labor market earlier, this result provides evidence for the hypothesis that the expansion effectively reduced the leave-related cost for employers, thereby boosting young women’s career prospects."
