--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
   <meta name="description" content="PhD Candidate in Economics" />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://fabian.stuermerheiber.github.io/404.html" />
+  <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/404.html" />
 
   
 
@@ -273,7 +273,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="https://fabian.stuermerheiber.github.io/404.html" />
+  <link rel="canonical" href="https://fabian-stuermerheiber.github.io/404.html" />
 
   
   
@@ -290,10 +290,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
-  <meta property="og:url" content="https://fabian.stuermerheiber.github.io/404.html" />
+  <meta property="og:url" content="https://fabian-stuermerheiber.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Fabian Stürmer-Heiber" />
-  <meta property="og:description" content="PhD Candidate in Economics" /><meta property="og:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
-    <meta property="twitter:image" content="https://fabian.stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="PhD Candidate in Economics" /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+    <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
   
