--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
       <h2 id="welcome">Welcome!</h2>
 <p>I am a PhD Candidate in Economics at the LMU Munich and part of the <a href="https://www.ebe.econ.uni-muenchen.de/index.html" target="_blank" rel="noopener">International Graduate Program Evidence-Based Economics</a>. My thesis advisors are <a href="https://www.empwi.econ.uni-muenchen.de/personen/professoren/winter/index.html" target="_blank" rel="noopener">Joachim Winter</a> and <a href="https://www.dominiksachs.com/" target="_blank" rel="noopener">Dominik Sachs</a>.</p>
 <p>My research fields are labor and family economics, as well as public finance.</p>
-<p>I work with large administrative &amp; survey datasets using state-of-the-art econometric methods to evaluate past and currently proposed policies. 
+<p>I work with large administrative &amp; survey datasets using state-of-the-art econometric/data-science methods to evaluate past and currently proposed policies. 
 On the one hand, I exploit spatial and temporal quasi-experimental variation for causal inference.
 On the other hand, I also build and estimate structural models to investigate counterfactuals that are beyond the scope of natural experiments.</p>
 <p>
