build with new abstracts

--- a/publication/index.html
+++ b/publication/index.html
@@ -627,7 +627,7 @@
       Hélène Turon</span>
   </span>
   (2021).
-  <a href="/publication/ccsubsidies/">The Fiscal Return to Childcare Policies</a>.
+  <a href="/publication/ccsubsidies/">Equity and Efficiency of Childcare Subsidies: A Structural Approach</a>.
   Work in Progress.
   
   <p>
@@ -690,7 +690,7 @@
       Fabian Stürmer-Heiber</span>
   </span>
   (2021).
-  <a href="/publication/promotions/">Women’s early careers and childcare policy</a>.
+  <a href="/publication/promotions/">Women&#39;s Early Careers and Childcare Policy</a>.
   Work in Progress.
   
   <p>
@@ -750,11 +750,11 @@
     
 
   <span >
-      Ulrich Schneider</span>, <span >
+      [Ulrich Schneider](https://www.ucschneider.com/)</span>, <span >
       Fabian Stürmer-Heiber</span>
   </span>
   (2021).
-  <a href="/publication/hours/">The Career Cost of Working Part-Time</a>.
+  <a href="/publication/hours/">Part-time Wage Penalties across the Working Hours Distribution</a>.
   Work in Progress.
   
   <p>
