--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ On the other hand, I also build and estimate structural models to investigate co
     
 
   <span >
-      [Ulrich Schneider](https://www.ucschneider.com/)</span>, <span >
+      Ulrich Schneider</span>, <span >
       Fabian Stürmer-Heiber</span>
   </div>
   
