--- a/publication/hours/index.html
+++ b/publication/hours/index.html
@@ -332,7 +332,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "[Ulrich Schneider](https://www.ucschneider.com/)"
+    "name": "Ulrich Schneider"
   },
   
   "publisher": {
@@ -614,7 +614,7 @@
     
 
   <span >
-      [Ulrich Schneider](https://www.ucschneider.com/)</span>, <span >
+      Ulrich Schneider</span>, <span >
       Fabian Stürmer-Heiber</span>
   </div>
   
