--- a/publication/index.html
+++ b/publication/index.html
@@ -750,7 +750,7 @@
     
 
   <span >
-      [Ulrich Schneider](https://www.ucschneider.com/)</span>, <span >
+      Ulrich Schneider</span>, <span >
       Fabian Stürmer-Heiber</span>
   </span>
   (2021).
