--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="PhD Candidate in Economics" />
+  <meta name="description" content="PhD Economist (working in the industry)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://fabian-stuermerheiber.github.io/404.html" />
@@ -292,7 +292,7 @@
   <meta property="og:site_name" content="Fabian Stürmer-Heiber" />
   <meta property="og:url" content="https://fabian-stuermerheiber.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Fabian Stürmer-Heiber" />
-  <meta property="og:description" content="PhD Candidate in Economics" /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
+  <meta property="og:description" content="PhD Economist (working in the industry)" /><meta property="og:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" />
     <meta property="twitter:image" content="https://fabian-stuermerheiber.github.io/media/icon_hu9fba192e2ec5ce1d5d890185a0e13b31_10759_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
