--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
 <p>My research fields focused labor and family economics, as well as public finance.</p>
 <p>During my PhD, I worked with large administrative &amp; survey datasets using state-of-the-art econometrics / data-science methods to evaluate past and currently proposed policies. 
 On the one hand, I exploited spatial and temporal quasi-experimental variation for causal inference.
-On the other hand, I also built and estimated structural models to investigate counterfactuals that are beyond the scope of natural experiments.
-You can find my dissertation <a href="https://d-nb.info/1260975363" target="_blank" rel="noopener">here</a> (please note that some of the projects are continued by my coauthors, e.g. the versions included in my dissertation are not be the most recent ones).</p>
+On the other hand, I also built and estimated structural models to investigate counterfactuals that are beyond the scope of natural experiments.</p>
+<p>You can find my dissertation <a href="https://d-nb.info/1260975363" target="_blank" rel="noopener">here</a> (please note that some of the projects are continued by my coauthors, e.g. the versions included in my dissertation are not be the most recent ones).</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/media/CVacademic_FabianStuermerHeiber.pdf" target="_blank">academic CV</a>.</p>
 
